# AGI

./: .env.default  .pre-commit-config.yaml  Dockerfile  README.md  agi.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: 1.bug.yml  2.feature.yml
.github/workflows/: auto_format.yml  pytest.yml
src/: agent_manager.py  commands.py  log.py  main.py
src/agents/: manager.py
src/commands/: agents.py  agi.py  command.py  google.py  memory.py  website.py
src/config/: config.py
src/configs/: agi_config.py  config.py
src/display/: print.py  spinner.py
src/functions/: browse.py  diagram_gen.py  execute_code.py  image_gen.py  speak.py
src/llm/: call_ai_function.py  llama.py
src/llms/: CodeAssistant.py  LLama.py  OpenAI.py
src/memories/: __init__.py  base.py  local.py  pinecone.py  redismem.py
src/memory/: local.py  pinecone.py
src/prompts/: prompt.py
src/tasks/: tasks.py
src/tests/: test_prompt.py
src/tests/agents/: test_manager.py
src/tests/commands/: test_command.py
src/tests/configs/: test_agi_config.py
src/tests/memories/: test_pinecone.py
src/utils/: file.py  file_operations.py  json.py  json_parser.py  json_utils.py  logs.py  token_counter.py  utils.py
tests/: test_command.py  test_manager.py  test_pinecone.py  test_prompt.py
